<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="infoPrefs"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent" >

    <br.frp.heya.gui.CustomPrefCategory
        android:title="@string/ouya_screens"
        android:key="ouyaScreens">
        <Preference
            android:key="prefOuyaDiscover"
            android:summary="@string/ouya_discover_summary"
            android:title="@string/ouya_discover_title" />
        <Preference
            android:key="prefOuyaPairing"
            android:summary="@string/ouya_pairing_summary"
            android:title="@string/ouya_pairing_title" />
        <Preference
            android:key="prefOuyaNetwork"
            android:summary="@string/ouya_network_summary"
            android:title="@string/ouya_network_title" />
        <Preference
            android:key="prefOuyaManage"
            android:summary="@string/ouya_manage_summary"
            android:title="@string/ouya_manage_title" />
    </br.frp.heya.gui.CustomPrefCategory>

    <br.frp.heya.gui.CustomPrefCategory android:title="@string/system_informative">

       <Preference
            android:key="prefVirtualDeviceDetails"
            android:summary="@string/notfound"
            android:title="@string/devicedetailstitle" />

        <Preference
            android:key="prefVirtualHostname"
            android:summary="@string/notfound"
            android:title="@string/hostnametitle" />

        <Preference
            android:key="prefVirtualWifiName"
            android:summary="@string/notfound"
            android:title="@string/wifissidtitle" />

        <Preference
            android:key="prefVirtualIpAddress"
            android:summary="@string/notfound"
            android:title="@string/iptitle" />

        <Preference
            android:key="prefVirtualDeviceUpTime"
            android:summary="@string/notfound"
            android:title="@string/deviceuptime" />

    </br.frp.heya.gui.CustomPrefCategory>

</PreferenceScreen>