<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ui_bg_color">

    <TextView
        android:id="@+id/dialog_title"
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingLeft="20dp"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/ui_base_color" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:text="@string/heya_app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:text="@string/heya_app_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom" />

            <TextView
                android:text="@string/resource_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:text="@string/resource_summary_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/resource_summary_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/resource_summary_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/resource_summary_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/resource_summary_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/resource_summary_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/resource_summary_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/resource_summary_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/resource_summary_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/resource_summary_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom" />

            <TextView
                android:text="@string/thanks_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:text="@string/thanks_summary_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/thanks_summary_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="35dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_ok" />

    </LinearLayout>

</LinearLayout>