<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/ui_bg_color">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingLeft="20dp"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/ui_base_color" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:text="@string/enable_child_mode_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingBottom="@dimen/settingspadding_bottom" />

            <TextView
                android:text="@string/enable_child_mode_how_exit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/enable_child_mode_how_exit_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom" />

            <TextView
                android:text="@string/enable_child_mode_restrict_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/enable_child_mode_restrict_desc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/enable_child_mode_restrict_desc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/enable_child_mode_restrict_desc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/enable_child_mode_restrict_desc4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/enable_child_mode_restrict_desc5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/enable_child_mode_restrict_desc6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/enable_child_mode_restrict_desc7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom_text" />

            <TextView
                android:text="@string/enable_child_mode_restrict_desc8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingBottom="@dimen/settingspadding_bottom" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal" >
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_ok" />
    </LinearLayout>

</LinearLayout>
